--- a/ShiftOS.Main/ShiftOS.Main.csproj
+++ b/ShiftOS.Main/ShiftOS.Main.csproj
@@ -52,16 +52,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShiftDemo.cs">
+    <Compile Include="ShiftOS\Apps\ShiftDemo.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ShiftDemo.Designer.cs">
+    <Compile Include="ShiftOS\Apps\ShiftDemo.Designer.cs">
       <DependentUpon>ShiftDemo.cs</DependentUpon>
     </Compile>
-    <Compile Include="TestForm.cs">
+    <Compile Include="ShiftOS\Apps\TestForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TestForm.Designer.cs">
+    <Compile Include="ShiftOS\Apps\TestForm.Designer.cs">
       <DependentUpon>TestForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="HijackScreen.resx">
@@ -77,10 +77,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ShiftDemo.resx">
+    <EmbeddedResource Include="ShiftOS\Apps\ShiftDemo.resx">
       <DependentUpon>ShiftDemo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TestForm.resx">
+    <EmbeddedResource Include="ShiftOS\Apps\TestForm.resx">
       <DependentUpon>TestForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
