Added a fuckton of changes
New infobox icons, new WIP  port of Snakey, we are getting closer to a
pre-alpha!

--- a/ShiftOS.Engine/ShiftOS.Engine.csproj
+++ b/ShiftOS.Engine/ShiftOS.Engine.csproj
@@ -92,5 +92,14 @@
   <ItemGroup>
     <None Include="Resources\iconInfoBox.fw.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\symbolWarning.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\symbolQuestion.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\symbolError.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
