--- a/ShiftOS.Engine/ShiftOS.Engine.csproj
+++ b/ShiftOS.Engine/ShiftOS.Engine.csproj
@@ -59,6 +59,7 @@
     <Compile Include="WindowManager\InfoboxTemplate.Designer.cs">
       <DependentUpon>InfoboxTemplate.cs</DependentUpon>
     </Compile>
+    <Compile Include="WindowManager\ShiftArray.cs" />
     <Compile Include="WindowManager\ShiftWindow.cs">
       <SubType>Form</SubType>
     </Compile>
