added the dang storage.ide file to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,4 @@ __pycache__/
 # OpenCover UI analysis results
 OpenCover/
 .vs/ShiftOS/v15/sqlite3/storage.ide
+.vs/ShiftOS/v15/sqlite3/storage.ide
