--- a/ShiftOS.Main/ShiftOS.Main.csproj
+++ b/ShiftOS.Main/ShiftOS.Main.csproj
@@ -88,6 +88,9 @@
     <Compile Include="ShiftOS\Desktop.Designer.cs">
       <DependentUpon>Desktop.cs</DependentUpon>
     </Compile>
+    <Compile Include="Terminal\Commands\Hello.cs" />
+    <Compile Include="Terminal\TerminalBackend.cs" />
+    <Compile Include="Terminal\TerminalCommand.cs" />
     <EmbeddedResource Include="HijackScreen.resx">
       <DependentUpon>HijackScreen.cs</DependentUpon>
     </EmbeddedResource>
