--- a/ShiftOS.Main/ShiftOS.Main.csproj
+++ b/ShiftOS.Main/ShiftOS.Main.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>Desktop.cs</DependentUpon>
     </Compile>
     <Compile Include="Terminal\Commands\Hello.cs" />
+    <Compile Include="Terminal\Commands\TestStory.cs" />
     <Compile Include="Terminal\TerminalBackend.cs" />
     <Compile Include="Terminal\TerminalCommand.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
