--- a/ShiftOS.Engine/ShiftOS.Engine.csproj
+++ b/ShiftOS.Engine/ShiftOS.Engine.csproj
@@ -76,6 +76,12 @@
     <Compile Include="ShiftFS\ShiftFS.cs" />
     <Compile Include="ShiftFS\IShiftNode.cs" />
     <Compile Include="Misc\Tools.cs" />
+    <Compile Include="UI\ShiftButton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\ShiftButton.Designer.cs">
+      <DependentUpon>ShiftButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="WindowManager\InfoboxTemplate.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1102,8 +1108,6 @@
   <ItemGroup>
     <None Include="Resources\zoombuttonpressed.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UI\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
