--- a/ShiftOS.Engine/ShiftOS.Engine.csproj
+++ b/ShiftOS.Engine/ShiftOS.Engine.csproj
@@ -63,6 +63,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SaveSystem.cs" />
     <Compile Include="ShiftFS\FileGUI\FileOpener.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -626,6 +627,7 @@
     <None Include="Resources\typesound.wav" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\UbuntuMono-R.ttf" />
     <None Include="Resources\uparrow.png" />
   </ItemGroup>
   <ItemGroup>
