i think it builds now
lets get this road on the show

--- a/ShiftOS.Main/ShiftOS.Main.csproj
+++ b/ShiftOS.Main/ShiftOS.Main.csproj
@@ -166,6 +166,7 @@
     <Content Include="Resources\Icons\iconTerminal.png" />
     <Content Include="Resources\Icons\iconTextPad.png" />
     <Content Include="Resources\Icons\Symbolinfo.png" />
+    <Content Include="Resources\pixel.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
