--- a/ShiftOS.Main/ShiftOS.Main.csproj
+++ b/ShiftOS.Main/ShiftOS.Main.csproj
@@ -54,40 +54,40 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShiftOS\Apps\FileSkimmer.cs">
+    <Compile Include="MainGame\Apps\FileSkimmer.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ShiftOS\Apps\FileSkimmer.Designer.cs">
+    <Compile Include="MainGame\Apps\FileSkimmer.Designer.cs">
       <DependentUpon>FileSkimmer.cs</DependentUpon>
     </Compile>
-    <Compile Include="ShiftOS\Apps\ShifterStuff\SelectColor.cs">
+    <Compile Include="MainGame\Apps\ShifterStuff\SelectColor.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ShiftOS\Apps\ShifterStuff\SelectColor.Designer.cs">
+    <Compile Include="MainGame\Apps\ShifterStuff\SelectColor.Designer.cs">
       <DependentUpon>SelectColor.cs</DependentUpon>
     </Compile>
-    <Compile Include="ShiftOS\Apps\ShifterStuff\Shifter.cs">
+    <Compile Include="MainGame\Apps\ShifterStuff\Shifter.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ShiftOS\Apps\ShifterStuff\Shifter.Designer.cs">
+    <Compile Include="MainGame\Apps\ShifterStuff\Shifter.Designer.cs">
       <DependentUpon>Shifter.cs</DependentUpon>
     </Compile>
-    <Compile Include="ShiftOS\Apps\Terminal.cs">
+    <Compile Include="MainGame\Apps\Terminal.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ShiftOS\Apps\Terminal.Designer.cs">
+    <Compile Include="MainGame\Apps\Terminal.Designer.cs">
       <DependentUpon>Terminal.cs</DependentUpon>
     </Compile>
-    <Compile Include="ShiftOS\Apps\TextPad.cs">
+    <Compile Include="MainGame\Apps\TextPad.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ShiftOS\Apps\TextPad.Designer.cs">
+    <Compile Include="MainGame\Apps\TextPad.Designer.cs">
       <DependentUpon>TextPad.cs</DependentUpon>
     </Compile>
-    <Compile Include="ShiftOS\Desktop.cs">
+    <Compile Include="MainGame\Desktop.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ShiftOS\Desktop.Designer.cs">
+    <Compile Include="MainGame\Desktop.Designer.cs">
       <DependentUpon>Desktop.cs</DependentUpon>
     </Compile>
     <Compile Include="Terminal\Commands\codepoints.cs" />
@@ -111,22 +111,22 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ShiftOS\Apps\FileSkimmer.resx">
+    <EmbeddedResource Include="MainGame\Apps\FileSkimmer.resx">
       <DependentUpon>FileSkimmer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ShiftOS\Apps\ShifterStuff\SelectColor.resx">
+    <EmbeddedResource Include="MainGame\Apps\ShifterStuff\SelectColor.resx">
       <DependentUpon>SelectColor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ShiftOS\Apps\ShifterStuff\Shifter.resx">
+    <EmbeddedResource Include="MainGame\Apps\ShifterStuff\Shifter.resx">
       <DependentUpon>Shifter.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ShiftOS\Apps\Terminal.resx">
+    <EmbeddedResource Include="MainGame\Apps\Terminal.resx">
       <DependentUpon>Terminal.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ShiftOS\Apps\TextPad.resx">
+    <EmbeddedResource Include="MainGame\Apps\TextPad.resx">
       <DependentUpon>TextPad.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ShiftOS\Desktop.resx">
+    <EmbeddedResource Include="MainGame\Desktop.resx">
       <DependentUpon>Desktop.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -153,7 +153,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ShiftOS\Upgrades\" />
+    <Folder Include="MainGame\Upgrades\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Apps\Artpad\ArtPadsave.png" />
